# rust-http-server

./: Cargo.toml  README.md  localhost-certgen.ps1  localhost-certgen.sh
http_server/: Cargo.toml
http_server/src/: handlers.rs  main.rs
public/: index.html  style.css  test.html
