[package]
name = "http_server"
version = "0.1.3"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.11.1"
dotenvy = "0.15.7"
# dotenv = "0.15.0"
# rustls = "0.23.28"
tokio-rustls = "0.26.2"


